src/test/ui/pattern/usefulness/slice-patterns-reachability.stderr
error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:9:9
   |
LL |         [true, ..] => {}
   |         ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/slice-patterns-reachability.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:10:9
   |
LL |         [true] => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:15:9
   |
LL |         [.., true] => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:16:9
   |
LL |         [true] => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:21:9
   |
LL |         [false, .., true] => {}
   |         ^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:22:9
   |
LL |         [false, true] => {}
   |         ^^^^^^^^^^^^^

error: aborting due to 6 previous errors

